# portana

./: .gitignore  Demo.ipynb  README.rst  pyproject.toml  readthedocs.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
portana/abstracts/: Analyzer.py  Data.py  data.py  optimizer.py  portfolio.py  timeseries.py
portana/analyzer/: equity_analyzer.py
portana/data/: SimData.py  generator.py  security.py  simulated.py
portana/data/simulated_db/: equities.csv  equity_funds.csv
portana/optimizer/: portfolio_optimizer.py  replacement.py
portana/portfolio/: portfolio.py
portana/timeseries/: analyzerseries.py  securitytimeseries.py  simtimeseries.py
tests/: test_portana.py
tests/analyzer/: reference_calculations.xlsx  test_equity_analyzer.py
tests/portfolio/: reference_calculations.xlsx
