[tool.poetry]
name = "portana"
version = "0.1.0"
description = ""
authors = ["benjaminye <Benjamin.ye@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
pandas = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
jupyterlab = "^2.2.8"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
